package com.uitopic.restock.platform.analytics.domain.model.valueobjects;

/**
 * Enum representing the high-level categories of metrics.
 * Used to group metrics by domain area (inventory, notifications, sales).
 */
public enum MetricCategory {
    INVENTORY,
    NOTIFICATIONS,
    SALES
}
